# web-app

./: .env.example  .eslintrc.json  .gitignore  .lintstagedrc  .stylelintrc.js  README.md  SECURITY.md  biome.json  middleware.ts  next.config.mjs  nonce-account.json  nonce.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.husky/: pre-commit
app/: global.css  layout.tsx  page.module.css  page.tsx
config/: config.ts  constants.ts
context/: error-provider.tsx  posthog-provider.tsx  react-query-provider.tsx  tx-status-provider.tsx
drift-balances/: index.js  package-lock.json  package.json
funds-program/: Anchor.toml  Cargo.toml  package-lock.json  package.json
funds-program/drift/: Cargo.toml
funds-program/drift/src/: lib.rs
funds-program/programs/funds-program/: Cargo.toml
funds-program/programs/funds-program/src/: constants.rs  cpi_programs.rs  errors.rs  helpers.rs  instructions.rs  lib.rs  macros.rs  math.rs  state.rs  utils.rs
funds-program/programs/funds-program/src/instructions/: auto_repay.rs  balance.rs  config.rs  drift.rs  lamports.rs  spl.rs  usdc.rs
funds-program/programs/funds-program/src/instructions/auto_repay/: auto_repay_check.rs  auto_repay_deposit.rs  auto_repay_start.rs  auto_repay_withdraw.rs
funds-program/programs/funds-program/src/instructions/balance/: begin_swap.rs  deposit.rs  deposit_lamports.rs  deposit_usdc.rs  end_swap.rs  init_swap_accounts.rs  repay_loan_with_collateral.rs  repay_with_collateral.rs  withdraw.rs  withdraw_lamports.rs  withdraw_usdc.rs
funds-program/programs/funds-program/src/instructions/config/: change_user.rs  close_drift_account.rs  close_user.rs  init_drift_account.rs  init_user.rs
funds-program/programs/funds-program/src/instructions/drift/: deposit.rs  init_account.rs  init_drift_account.rs  withdraw_borrow.rs
funds-program/programs/funds-program/src/instructions/lamports/: deposit_lamports.rs  deposit_lamports_drift.rs  spend_lamports.rs  transfer_lamports.rs  withdraw_lamports.rs
funds-program/programs/funds-program/src/instructions/spl/: spend_usdc.rs  transfer_spl.rs
funds-program/programs/funds-program/src/instructions/usdc/: spend_usdc.rs  withdraw_usdc.rs
funds-program/programs/funds-program/src/instructions/user/: close_drift_account.rs  deposit.rs  init_drift_account.rs  withdraw.rs
idl/: marginfi.json  quartz.json
interfaces/: balance.interface.ts  (+1 more)
(+950 files in other folders)
