[package]
name = "drift-sdk"
version = "2.92.0"
description = "Created with IDLGen"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_sdk"

[features]
rpc = []
i11n = ["anchor-i11n"]
no-entrypoint=[]
cpi = ["no-entrypoint"]
events = []
solana = []
default = ["rpc", "i11n", "cpi", "events"]

[dependencies]
anchor-lang = "0.30.0"
anchor-i11n = { optional = true, version = "0.1.0"}