[package]
name = "funds-program"
version = "0.1.6"
description = "Quartz funds program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "funds_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
local = []
devnet = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-security-txt = "1.1.1"
drift = { path = "../../deps/drift" }
jupiter = { path = "../../deps/jupiter" }
