[package]
name = "funds-program"
version = "0.1.13"
description = "Quartz"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "funds_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
local = []
devnet = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-security-txt = "1.1.0"
pyth-solana-receiver-sdk ="0.3.2"
drift = { git = "https://github.com/drift-labs/protocol-v2", rev = "55b1e3e", version = "2.101.0", features = ["cpi"] }
jupiter = { path = "../../deps/jupiter" }
