[package]
name = "funds-program"
version = "0.1.14"
description = "Quartz"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "funds_program"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16"
solana-security-txt = "1.1.0"
pyth-solana-receiver-sdk = "0.3.2"
drift = { git = "https://github.com/drift-labs/protocol-v2", rev = "55b1e3e41fc44a9e28b33a759371e180aa53c172", version = "2.101.0", features = ["cpi"] }
jupiter = { path = "../../deps/jupiter" }
